k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: backend
  template:
    metadata:
      labels:
        app: chat-app
        tier: backend

    spec:
      containers:
      - name: chatapp-backend
        image: ajitsinghnegi/chatapp-backend:latest
        ports:
         - containerPort: 5001
