k8s/deployment-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongobd-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: mongodb
  template:
    metadata:
      labels:
        app: chat-app
        tier: mongodb
    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db         
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
