k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-app
spec:
  selector:
    app: chat-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
